--- a/Lab1/docker-compose.yml
+++ b/Lab1/docker-compose.yml
@@ -9,7 +9,8 @@ networks:
 
 services:
   wordpress:
-      image: wordpress
+      build:
+          context: wordpress
       restart: always
       ports:
         - 80:80
@@ -18,8 +19,6 @@ services:
         WORDPRESS_DB_USER: exampleuser
         WORDPRESS_DB_PASSWORD: examplepass
         WORDPRESS_DB_NAME: exampledb
-      volumes:
-        - wordpress:/var/www/html
       networks:
         world-company-network:
           ipv4_address: 172.18.0.2
@@ -39,5 +38,4 @@ services:
           ipv4_address: 172.18.0.3
 
 volumes:
-  wordpress:
   db:
