--- a/Lab1/docker-compose.yml
+++ b/Lab1/docker-compose.yml
@@ -4,8 +4,7 @@ networks:
     goldenpot_lan:
       ipam:
         config:
-          - subnet: 172.18.0.0/8
-
+          - subnet: 172.18.0.0/28
 
 services:
   website:
@@ -40,6 +39,8 @@ services:
       - 3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_USER=jsmith
+      - MYSQL_PASSWORD=flaquita
     networks:
       goldenpot_lan:
         ipv4_address: 172.18.0.5
