--- a/Lab1/setup/Dockerfile
+++ b/Lab1/setup/Dockerfile
@@ -6,4 +6,7 @@ COPY intern_first_day.txt /home/administration
 WORKDIR /code
 RUN pip install fastapi uvicorn pydantic
 
+# for healthcheck
+RUN apt-get update && apt-get install curl -y
+
 CMD uvicorn main:app --host 0.0.0.0 --port 80
