--- a/Lab1/users/Dockerfile
+++ b/Lab1/users/Dockerfile
@@ -7,6 +7,7 @@ RUN mkdir /var/run/sshd
 RUN echo 'root:extremelyLongPasswordNotSupposedToBeDiscovered' | chpasswd
 RUN useradd -m "randretti"
 RUN useradd -m "jsmith"
+# RUN echo 'randretti:anPK02#!lv3rqxh' | chpasswd
 RUN echo 'randretti:anPK02#!lv3rqxh' | chpasswd
 RUN echo 'jsmith:flaquita' | chpasswd
 
@@ -14,5 +15,8 @@ RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/s
 
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 RUN ssh-keygen -A
+
+RUN service mysql start 
+COPY users_info /home/jsmith 
 
 CMD ["/etc/init.d/ssh", "start", "-D"]
